[lworld] compiler/arraycopy/TestObjectArrayClone.java fails with SIGSEGV in PhaseMacroExpand::expand_arraycopy_node

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • repo-valhalla
    • Affects Version/s: repo-valhalla
    • Component/s: hotspot

      Test fails with "-XX:-ReduceInitialCardMarks"

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x00007fe55df0c10f, pid=1978793, tid=1978820
      #
      # JRE version: Java(TM) SE Runtime Environment (24.0+1) (fastdebug build 24-valhalla+1-63)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 24-valhalla+1-63, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x140a10f] PhaseMacroExpand::expand_arraycopy_node(ArrayCopyNode*)+0x17f
      #

      Current CompileTask:
      C2:8722 33 b java.lang.invoke.LambdaForm$DMH/0x00007fe4e64100d0::invokeVirtual (18 bytes)

      Stack: [0x00007fe53b41a000,0x00007fe53b51a000], sp=0x00007fe53b515270, free space=1004k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x140a10f] PhaseMacroExpand::expand_arraycopy_node(ArrayCopyNode*)+0x17f (macroArrayCopy.cpp:1382)
      V [libjvm.so+0x13ff28c] PhaseMacroExpand::expand_macro_nodes()+0xa3c (macro.cpp:3088)
      V [libjvm.so+0xa8c2ce] Compile::Optimize()+0xbce (compile.cpp:2935)
      V [libjvm.so+0xa901f5] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1c95 (compile.cpp:865)
      V [libjvm.so+0x8c5e62] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1f2 (c2compiler.cpp:143)
      V [libjvm.so+0xa9c228] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x928 (compileBroker.cpp:2319)
      V [libjvm.so+0xa9cf68] CompileBroker::compiler_thread_loop()+0x528 (compileBroker.cpp:1977)
      V [libjvm.so+0xfabe3e] JavaThread::thread_main_inner()+0xee (javaThread.cpp:773)
      V [libjvm.so+0x192e686] Thread::call_run()+0xb6 (thread.cpp:232)
      V [libjvm.so+0x15e9b88] thread_native_entry(Thread*)+0x128 (os_linux.cpp:858)

            Assignee:
            Christian Hagedorn
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: